add finished project

--- a/product_list/sass/screen.scss
+++ b/product_list/sass/screen.scss
@@ -8,5 +8,6 @@
 
 @import "layout/_header.scss";
 @import "layout/_footer.scss";
+@import "_shop.scss";
 @import "_products.scss";
 @import "_cart.scss";
