--- a/product_list/sass/tools/_variables.scss
+++ b/product_list/sass/tools/_variables.scss
@@ -5,4 +5,5 @@ $color-light-blue: #add8df;
 $color-dark: #010007;
 $color-dark-opac: rgba(1, 0, 7, 0.4);
 $color-blue: #009bb4;
+$color-blue-opacity: rgba(0, 155 , 180, 0.5);
 $color-light-grey: #f8f8f8;
