--- a/product_list/sass/base/_general.scss
+++ b/product_list/sass/base/_general.scss
@@ -24,15 +24,6 @@ body {
   }
 }
 
-button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background: none;
-  border: none;
-
-}
-
 h1 {
   font-family:  'Lato', sans-serif;
   font-weight: normal;
@@ -75,18 +66,11 @@ p {
   background: $color-blue;
   border-radius: 7px;
 
+  &:disabled{
+    background: $color-blue-opacity;
+  }
+
 }
 .availableNull{
   opacity: 0.5;
-}
-.tooltip {
-  position: fixed;
-  padding: 10px 20px;
-  border: 1px solid #b3c9ce;
-  border-radius: 4px;
-  text-align: center;
-  font: italic 14px/1.3 sans-serif;
-  color: #333;
-  background: #fff;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
 }
